@@ -29,6 +29,13 @@ Library
 
 - Issue #24369: Defend against key-changes during iteration.
 
+Tests
+-----
+
+- Issue #24373: _testmultiphase and xxlimited now use tp_traverse and
+  tp_finalize to avoid reference leaks encountered when combining tp_dealloc
+  with PyType_FromSpec (see issue #16690 for details)
+
 
 What's New in Python 3.5.0 beta 2?
 ==================================
